--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog of flooding-lib
 2.7 (unreleased)
 ----------------
 
-- Nothing changed yet.
+Forgot to add the flooding_lib.util.viewutil module, where I moved a
+bit of the views.py code.
 
 
 2.6.2 (2012-08-17)
