--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.9 (unreleased)
+----------------
+
+- Nothing changed yet.
+
+
 2.8 (2012-08-23)
 ----------------
 
