--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.11 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.10 (2012-08-28)
 -----------------
 
