--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.11.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 2.11.1 (2012-08-29)
 -------------------
 
