--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.13 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.12 (2012-08-31)
 -----------------
 
