--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.14 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.13 (2012-09-03)
 -----------------
 
