--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.15 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.14 (2012-09-07)
 -----------------
 
