--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.17 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.16 (2012-09-21)
 -----------------
 
