--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.18 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.17 (2012-10-08)
 -----------------
 
