--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog of flooding-lib
 2.18 (unreleased)
 -----------------
 
-- Nothing changed yet.
+Slightly improve breach info page (don't show None in case of missing
+data, give max water depth images a bit of layout)
 
 
 2.17 (2012-10-08)
