Back to development: 2.17.2

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.17.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 2.17.1 (2012-10-09)
 -------------------
 
