Back to development: 2.19

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.19 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.18 (2012-10-10)
 -----------------
 
