Added an OpenStreetMap background for the max water depth images. Synchronized panning and zooming, and checkboxes to turn them on and off (in case there are many on one page and the user wants to compare two).

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,10 @@ Changelog of flooding-lib
 2.19 (unreleased)
 -----------------
 
-- Nothing changed yet.
+Added an OpenStreetMap background for the max water depth
+images. Synchronized panning and zooming, and checkboxes to turn them
+on and off (in case there are many on one page and the user wants to
+compare two).
 
 
 2.18 (2012-10-10)
