Fix a bug with Excel metadata downloads. This was caused by new mixins for all class based views, that set all kwargs on the view and always add a permission manager. This meant that the kwargs weren't sent as arguments anymore, resulting in an exception. It also meant that the @receives_permission_manager decorators on class based views can be removed.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,6 +9,12 @@ images. Synchronized panning and zooming, and checkboxes to turn them
 on and off (in case there are many on one page and the user wants to
 compare two).
 
+Fix a bug with Excel metadata downloads. This was caused by new mixins
+for all class based views, that set all kwargs on the view and always
+add a permission manager. This meant that the kwargs weren't sent as
+arguments anymore, resulting in an exception. It also meant that the
+@receives_permission_manager decorators on class based views can be
+removed.
 
 2.18 (2012-10-10)
 -----------------
