Back to development: 2.20

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.20 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.19 (2012-10-15)
 -----------------
 
