Back to development: 2.21

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.21 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.20 (2012-10-16)
 -----------------
 
