--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.22 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.21 (2012-10-17)
 -----------------
 
