--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.23 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.22 (2012-10-17)
 -----------------
 
