--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,12 @@ Changelog of flooding-lib
 2.23 (unreleased)
 -----------------
 
-- Nothing changed yet.
+Adapt comment line removing functions so that they can also be called
+on individual files, and don't depend on the size of /tmp on the
+webserver anymore.
+
+Change the zipfile creation functions so that they don't try to do
+everything in memory.
 
 
 2.22 (2012-10-17)
