Back to development: 2.24

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.24 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.23 (2012-10-19)
 -----------------
 
