Fix link in breachinfo page

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 Changelog of flooding-lib
 ===================================================
 
+2.23.1 (2012-10-22)
+-------------------
+
+Fix link in breachinfo page.
+
 2.23 (2012-10-19)
 -----------------
 
