Back to development: 2.23.2

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.23.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 2.23.1 (2012-10-22)
 -------------------
 
