--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,8 @@ Changelog of flooding-lib
 2.24 (unreleased)
 -----------------
 
-- Updated Exporttool.Result to contain windows and linux folder names,
-  in case you want to access the same object from different OSes.
+- Updated Exporttool.Result to contain only the result file base
+  names.
 
 - Added test management task test_task_200.
 
