--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.25 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.24 (2012-10-22)
 -----------------
 
