--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,8 @@ Changelog of flooding-lib
 - Updating export_run state after finishing calculate_export_maps
   (task 200).
 
+- Updated readme.
+
 
 2.24 (2012-10-22)
 -----------------
