--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 2.25 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fixed error on import perform_task module.
 
 
 2.24.1 (2012-10-23)
