--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.24.3 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 2.24.2 (2012-10-30)
 -------------------
 
