--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,9 @@ Changelog of flooding-lib
 2.25 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Added 3Di tasks 210 and 220. Task 210 runs a 3Di scenario and
+  produces a .nc file. Task 220 takes the .nc file and generates
+  png+pgw files from it.
 
 
 2.24.1 (2012-10-23)
