--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 2.27 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Replaced os.sep with '/' due problem in windows.
 
 
 2.26 (2012-10-30)
