--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.28 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.27 (2012-10-31)
 -----------------
 
