'External water' moet vertaald worden als 'Buitenwater'

--- a/flooding_lib/tools/importtool/locale/nl/LC_MESSAGES/django.po
+++ b/flooding_lib/tools/importtool/locale/nl/LC_MESSAGES/django.po
@@ -148,7 +148,7 @@ msgstr "Bres"
 
 #: models.py:627
 msgid "External Water"
-msgstr "Extern Water"
+msgstr "Buitenwater"
 
 #: models.py:628
 msgid "Model"
