Back to development: 2.30

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.30 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.29 (2012-11-01)
 -----------------
 
