Back to development: 2.31

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.31 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.30 (2012-11-12)
 -----------------
 
