--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 2.31 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Task 220 now works correctly with the detailed AHN.
 
 
 2.30 (2012-11-12)
