Back to development: 2.32

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.32 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.31 (2012-11-13)
 -----------------
 
