Added detailed map for task 220. Moved javascript code from export_new_index.html to screen_exports.js. Added functionality to filter scenarios in exporttool. Added extra fields to listgrids in exporttool.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -20,6 +20,10 @@ Changelog of flooding-lib
 
 - Moved javascript code from export_new_index.html to screen_exports.js.
 
+- Added functionality to filter scenarios.
+
+- Added extra fields to listgrids. 
+
 
 2.29 (2012-11-01)
 -----------------
