Back to development: 2.34

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.34 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.33 (2012-11-13)
 -----------------
 
