--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.36 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.35 (2012-11-21)
 -----------------
 
