--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,9 @@ Changelog of flooding-lib
 2.37 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fix problem by the starting a new sceanrio on import.
+
+- Add checkboxfields to select maps for export.
 
 
 2.36 (2012-11-22)
