Back to development: 2.39

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.39 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.38 (2012-11-27)
 -----------------
 
