--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.40 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.39 (2012-11-27)
 -----------------
 
