--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 2.42 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Set translation to lazy.
 
 
 2.41 (2012-11-27)
