--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.43 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.42 (2012-11-28)
 -----------------
 
