--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.44 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.43 (2012-11-29)
 -----------------
 
