--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 2.44 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fixed error in exporttool by mapping filepath.
 
 
 2.43 (2012-11-29)
