Back to development: 2.45

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.45 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.44 (2012-12-03)
 -----------------
 
