--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.47 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.46 (2012-12-06)
 -----------------
 
