--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog of flooding-lib
 2.47 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fixed task 210; added field Scenario.result_base_path for 3Di. Traditionally
+  the path is retrieved from scenario.breaches[0].region.path.
 
 
 2.46 (2012-12-06)
