--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.48 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.47 (2012-12-12)
 -----------------
 
