--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog of flooding-lib
 2.48 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Added creating ScenarioBreach when creating 3Di scenario. This
+  ScenarioBreach is dummy, but it is needed by various flooding components.
 
 
 2.47 (2012-12-12)
