Back to development: 2.49

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.49 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.48.1 (2012-12-17)
 -------------------
 
