Back to development: 2.50

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.50 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.49 (2012-12-19)
 -----------------
 
