Back to development: 2.52

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.52 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.51 (2012-12-20)
 -----------------
 
