--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 2.52 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fix 'Export run details' view.
 
 
 2.51 (2012-12-20)
