--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 2.53 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Add the loading message for exporttool. 
 
 
 2.52 (2012-12-20)
