--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.54 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.53 (2012-12-24)
 -----------------
 
