--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,13 +4,14 @@ Changelog of flooding-lib
 2.54 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fix a bug where the importtool tries to convert everything into
+  ASCII without reason.
 
 
 2.53 (2012-12-24)
 -----------------
 
-- Add the loading message for exporttool. 
+- Add the loading message for exporttool.
 
 
 2.52 (2012-12-20)
