--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.55 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.54 (2013-01-14)
 -----------------
 
