--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,7 @@ Changelog of flooding-lib
 - Rewrite png_generation script to use numpy and gdal instead of the
   nens.asc libraries.
 
+- Reorganize tests.
 
 2.54 (2013-01-14)
 -----------------
