Let the png_generation task use a custom tmp_dir.
Reinstate the "__revision__" bit in png_generation, apparently it's still used.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,6 +9,9 @@ Changelog of flooding-lib
 
 - Reorganize tests.
 
+- Change 'temporarily_unzipped' so that it can use alternative temp
+  directories, and optionally not rezip any changed files.
+
 2.54 (2013-01-14)
 -----------------
 
