--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.56 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.55 (2013-01-23)
 -----------------
 
